try to fix MEM problem

--- a/configs/euroc.yaml
+++ b/configs/euroc.yaml
@@ -3,17 +3,17 @@ ROOT: /data2/datasets/yuhengq/Euroc
 TYPE: euroc
 DATASETS:
   [
-    MH_01_easy,
-    MH_02_easy,
-    MH_03_medium,
-    MH_04_difficult,
-    MH_05_difficult,
-    V1_01_easy,
-    V1_02_medium,
-    V1_03_difficult,
-    V2_01_easy,
-    V2_02_medium,
-    V2_03_difficult,
+    MH_01_easy/mav0,
+    MH_02_easy/mav0,
+    MH_03_medium/mav0,
+    MH_04_difficult/mav0,
+    MH_05_difficult/mav0,
+    V1_01_easy/mav0,
+    V1_02_medium/mav0,
+    V1_03_difficult/mav0,
+    V2_01_easy/mav0,
+    V2_02_medium/mav0,
+    V2_03_difficult/mav0,
   ]
 VO_MODEL: ./models/stereo_cvt_tartanvo_1914.pkl
 POSE_MODEL: null
